# EL_CALC

./: CMakeLists.txt  Console.cpp  Console.h  Kalkulator_dla_elektronikow_MG.cpp  Number.cpp  Number.h  README.md  Technical Raport MG.docx
